testsuite/tests/lexical_envs/invalid_subunit_root/test.out
= multiple =
File "test.py", line 17, in Example2
    Error: Only one sub-unit root is allowed: Example1

= derived =
File "test.py", line 31, in Example
    Error: No node can derive from subunit roots: here we have DerivedExample

= synthetic =
File "test.py", line 52, in SyntheticNode
    Error: Synthetic nodes cannot be sub-unit roots

= bad_main_rule_1 =
File "test.py", line 66, in ExampleWrapper.example
    Error: Example.list cannot appear anywhere in trees except as a root node

= bad_main_rule_2 =
Error: At least one parser must create lists of sub-unit roots

= non_root_list =
File "test.py", line 99, in Subunit.fields
    Error: Subunit.list cannot appear anywhere in trees except as a root node

= multiple_lists =
File "test.py", line 114, in ListOfExample
    Error: Lists of sub-unit roots cannot be subclassed

= subunit_root_field =
File "test.py", line 130, in Example.child
    Error: Example cannot appear anywhere in trees except as a child of Example.list nodes

Done
